--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -56,7 +56,7 @@ body {
 .bg-pattern__top {
     position: absolute;
     transform: translate(-50%, -50%);
-    right: 14.22%;
+    right: 24%;
     top: 7%;
 }
 
@@ -116,7 +116,7 @@ body {
 .c-person {
     text-align: center;
     color: $text-light;
-    padding: 72px 105px 28px 105px;
+    padding: 72px 105px 24px 105px;
 }
 
 .c-person--name {
@@ -153,4 +153,17 @@ body {
     font-size: 10px;
     color: $text-light;
     letter-spacing: 1.5px;
+}
+
+@media screen and (max-width: 480px) {
+
+    .bg-pattern__top {
+        transform: none;
+        right: 25%;
+        top: -50%;
+    }
+    
+    .bg-pattern__bottom {
+        left: 120%;
+    }
 }
