--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -68,6 +68,13 @@ body {
     background-color: $primary;
     min-height: 100vh;
     height: 100%;
+    background-repeat: no-repeat;
+    background-image:
+        url(../images/bg-pattern-top.svg), 
+        url(../images/bg-pattern-bottom.svg);
+    background-position: 
+        calc(-270px - ((1440px - 100vw)/2)) -520px,
+        calc(710px - ((1440px - 100vw)/2)) 380px;
 }
 
 /* ----------------------
